--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,22 @@
   color: #61dafb;
 }
 
-#input-numberPerson{
+#numberPerson{
   text-align: center;
+}
+
+.MuiAccordion-root.Mui-expanded {
+  margin: 0 !important;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 @keyframes App-logo-spin {
